Fix scrollbar showing on CLR overlay (#1401)

--- a/static/css/clr.overlay.scss
+++ b/static/css/clr.overlay.scss
@@ -115,3 +115,6 @@ div.notifications div span.word4 {
   bottom: 0;
   right: 50;
 }
+::-webkit-scrollbar {
+  display: none;
+}
